--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@headlessui/react": "^2.2.0",
     "@hookform/resolvers": "^3.10.0",
     "class-variance-authority": "^0.7.1",
@@ -19,7 +20,6 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
-    "resend": "^4.1.2",
     "tailwind-merge": "^3.0.1",
     "zod": "^3.24.1"
   },
